feat(api): add room websocket.
