# api/internal/room/domain/room.go
@@ -1,7 +1,6 @@
 package domain
 
 import (
-	"fmt"
 	"time"
 )
 
@@ -9,7 +8,7 @@ type UserId string
 type RoomId string
 
 type Room struct {
-	Id           RoomId
+	Id           RoomId `bson:"_id"`
 	OwnerId      UserId
 	CreatedAt    time.Time
 	PassCode     string
@@ -19,7 +18,7 @@ type Room struct {
 
 func (r *Room) AddParticipant(userId UserId) error {
 	if r.HasParticipant(userId) {
-		return fmt.Errorf("user already in room")
+		return nil
 	}
 
 	r.Participants = append(r.Participants, Participant{
@@ -30,6 +29,14 @@ func (r *Room) AddParticipant(userId UserId) error {
 }
 
 func (r *Room) HasParticipant(userId UserId) bool {
+	if r.OwnerId == userId {
+		return true
+	}
+
+	if len(r.Participants) == 0 {
+		return false
+	}
+
 	for _, p := range r.Participants {
 		if p.UserId == userId {
 			return true
